src/objects/BurdenSchedule__c.object
<CustomObject>
    <fields>
        <fullName>CostCode__c</fullName>
        <label>Cost Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CostPlusStructure__c</fullName>
        <label>Cost Plus Structure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EffectiveFromDate__c</fullName>
        <label>Effective From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EffectiveToDate__c</fullName>
        <label>Effective To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LastUpdateDate__c</fullName>
        <label>Last Update Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Multiplier__c</fullName>
        <label>Multiplier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OracleRateScheduleID__c</fullName>
        <externalId>true</externalId>
        <label>Oracle Rate Schedule ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OracleRateScheduleName__c</fullName>
        <label>Oracle Rate Schedule Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrgID__c</fullName>
        <label>OrgID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrganizationName__c</fullName>
        <label>OrganizationName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Burden Schedule</label>
    <listViews>
        <fullName>Query_Schedule_Name</fullName>
        <columns>CostPlusStructure__c</columns>
        <columns>CostCode__c</columns>
        <columns>EffectiveFromDate__c</columns>
        <columns>EffectiveToDate__c</columns>
        <columns>Multiplier__c</columns>
        <columns>OracleRateScheduleID__c</columns>
        <columns>OracleRateScheduleName__c</columns>
        <columns>OrganizationName__c</columns>
        <columns>OrgID__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OracleRateScheduleName__c</field>
            <operation>equals</operation>
            <value>80.ANZ_Standard</value>
        </filters>
        <label>Query Schedule Name</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Query_Schedule_Name_Cost_Code</fullName>
        <columns>CostPlusStructure__c</columns>
        <columns>CostCode__c</columns>
        <columns>EffectiveFromDate__c</columns>
        <columns>EffectiveToDate__c</columns>
        <columns>Multiplier__c</columns>
        <columns>OracleRateScheduleID__c</columns>
        <columns>OracleRateScheduleName__c</columns>
        <columns>OrganizationName__c</columns>
        <columns>OrgID__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OracleRateScheduleName__c</field>
            <operation>equals</operation>
            <value>80.ANZ_Standard</value>
        </filters>
        <filters>
            <field>CostCode__c</field>
            <operation>equals</operation>
            <value>LABOR FRINGE 1,LABOR OVERHEAD 6</value>
        </filters>
        <label>Query Schedule Name + Cost Code</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>BS-{0000000000}</displayFormat>
        <label>Burden Schedule Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Burden Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>